--- a/package.json
+++ b/package.json
@@ -1,41 +1,52 @@
 {
-  "name": "service-booking-app-front",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
-    "lint": "eslint src --fix --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
-    "@mui/material": "^7.0.2",
-    "@tanstack/react-query": "^5.72.2",
-    "axios": "^1.8.4",
-    "dayjs": "^1.11.13",
-    "notistack": "^3.0.2",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-hook-form": "^7.55.0",
-    "react-router": "^7.5.0",
-    "zod": "^3.24.2"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.21.0",
-    "@tanstack/eslint-plugin-query": "^5.72.2",
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^19.0.4",
-    "@vitejs/plugin-react": "^4.3.4",
-    "eslint": "^9.21.0",
-    "eslint-plugin-react-hooks": "^5.1.0",
-    "eslint-plugin-react-refresh": "^0.4.19",
-    "globals": "^15.15.0",
-    "lefthook": "^1.11.8",
-    "typescript": "~5.7.2",
-    "typescript-eslint": "^8.24.1",
-    "vite": "^6.2.0"
-  }
+    "name": "service-booking-app-front",
+    "private": true,
+    "version": "0.0.0",
+    "type": "module",
+    "scripts": {
+        "dev": "vite",
+        "build": "tsc -b && vite build",
+        "lint": "eslint src --fix --report-unused-disable-directives --max-warnings 0",
+        "preview": "vite preview"
+    },
+    "dependencies": {
+        "@emotion/react": "^11.14.0",
+        "@emotion/styled": "^11.14.0",
+        "@mui/material": "^7.0.2",
+        "@mui/x-data-grid": "^7.28.3",
+        "@mui/x-date-pickers": "^7.28.3",
+        "@tanstack/react-query": "^5.72.2",
+        "axios": "^1.8.4",
+        "dayjs": "^1.11.13",
+        "i18next": "^24.2.3",
+        "i18next-chained-backend": "^4.6.2",
+        "i18next-http-backend": "^3.0.2",
+        "i18next-localstorage-backend": "^4.2.0",
+        "notistack": "^3.0.2",
+        "react": "^19.0.0",
+        "react-dom": "^19.0.0",
+        "react-error-boundary": "^5.0.0",
+        "react-hook-form": "^7.55.0",
+        "react-i18next": "^15.4.1",
+        "react-router": "^7.5.0",
+        "zod": "^3.24.2",
+        "zod-i18n-map": "^2.27.0"
+    },
+    "devDependencies": {
+        "@eslint/js": "^9.21.0",
+        "@tanstack/eslint-plugin-query": "^5.72.2",
+        "@types/node": "^22.14.0",
+        "@types/react": "^19.0.10",
+        "@types/react-dom": "^19.0.4",
+        "@vitejs/plugin-react": "^4.3.4",
+        "eslint": "^9.21.0",
+        "eslint-plugin-react-hooks": "^5.1.0",
+        "eslint-plugin-react-refresh": "^0.4.19",
+        "globals": "^15.15.0",
+        "lefthook": "^1.11.8",
+        "prettier": "^3.5.3",
+        "typescript": "~5.7.2",
+        "typescript-eslint": "^8.24.1",
+        "vite": "^6.2.0"
+    }
 }
