--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "dependencies": {
         "@emotion/react": "^11.14.0",
         "@emotion/styled": "^11.14.0",
+        "@hookform/resolvers": "^5.0.1",
+        "@mui/icons-material": "^7.0.2",
         "@mui/material": "^7.0.2",
         "@mui/x-data-grid": "^7.28.3",
         "@mui/x-date-pickers": "^7.28.3",
