--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "i18next-chained-backend": "^4.6.2",
         "i18next-http-backend": "^3.0.2",
         "i18next-localstorage-backend": "^4.2.0",
+        "immer": "^10.1.1",
         "notistack": "^3.0.2",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
@@ -32,7 +33,8 @@
         "react-i18next": "^15.4.1",
         "react-router": "^7.5.0",
         "zod": "^3.24.2",
-        "zod-i18n-map": "^2.27.0"
+        "zod-i18n-map": "^2.27.0",
+        "zustand": "^5.0.3"
     },
     "devDependencies": {
         "@eslint/js": "^9.21.0",
