--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
         "eslint": "^9.21.0",
         "eslint-plugin-react-hooks": "^5.1.0",
         "eslint-plugin-react-refresh": "^0.4.19",
+        "eslint-plugin-simple-import-sort": "^12.1.1",
         "globals": "^15.15.0",
         "lefthook": "^1.11.8",
         "prettier": "^3.5.3",
