--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@mui/x-data-grid": "^7.28.3",
         "@mui/x-date-pickers": "^7.28.3",
         "@tanstack/react-query": "^5.72.2",
+        "@tanstack/react-table": "^8.21.3",
         "axios": "^1.8.4",
         "dayjs": "^1.11.13",
         "i18next": "^24.2.3",
